WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242556
Handle failed IOSurface creation for image buffer
https://bugs.webkit.org/show_bug.cgi?id=242556
Summary
Handle failed IOSurface creation for image buffer
Nikos Mouchtaris
Reported
2022-07-09 12:28:12 PDT
Handle failed IOSurface creation for image buffer
Attachments
Add attachment
proposed patch, testcase, etc.
Nikos Mouchtaris
Comment 1
2022-07-09 13:14:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2264
EWS
Comment 2
2022-07-14 23:55:36 PDT
Committed
252493@main
(e87a1dc9e5b5): <
https://commits.webkit.org/252493@main
> Reviewed commits have been landed. Closing PR #2264 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-07-14 23:56:16 PDT
<
rdar://problem/97058655
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug