Cherry-pick e87a1dc9e5b5. rdar://problem/94622888

Handle failed IOSurface creation for image buffer
    https://bugs.webkit.org/show_bug.cgi?id=242556
    <rdar://94622888>

    Reviewed by Said Abou-Hallawa.

    Check the backend handle sent back to the web process to ensure the image buffer in the web process
    is in synch with the GPU process. For the test, create a canvas greater than the max IOSurface size,
    disabling the check in the web process so that an accelerated buffer is created, IOSurface
    creation in the GPU process fails so it creates an unaccelerated buffer, and ensure that the
    web process correctly changes the backend type to an unaccelerated buffer.

    * LayoutTests/fast/canvas/image-buffer-iosurface-disabled-expected.txt: Added.
    * LayoutTests/fast/canvas/image-buffer-iosurface-disabled.html: Added.
    * Source/WebCore/page/ChromeClient.h:
    (WebCore::ChromeClient::shouldBlockIOSurfaceCreationForNextImageBuffer):
    * Source/WebCore/platform/graphics/ConcreteImageBuffer.h:
    * Source/WebCore/platform/graphics/ImageBuffer.h:
    (WebCore::ImageBuffer::fallbackToUnaccelerated):
    * Source/WebCore/testing/Internals.cpp:
    (WebCore::Internals::shouldBlockIOSurfaceCreationForNextImageBuffer):
    * Source/WebCore/testing/Internals.h:
    * Source/WebCore/testing/Internals.idl:
    * Source/WebKit/GPUProcess/graphics/RemoteImageBuffer.h:
    (WebKit::RemoteImageBuffer::create):
    * Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.cpp:
    (WebKit::RemoteRenderingBackend::didCreateImageBufferBackend):
    (WebKit::RemoteRenderingBackend::shouldBlockIOSurfaceCreationForNextImageBufferForTesting):
    (WebKit::RemoteRenderingBackend::createImageBufferWithQualifiedIdentifier):
    * Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.h:
    * Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.messages.in:
    * Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.cpp:
    (WebKit::RemoteRenderingBackendProxy::shouldBlockIOSurfaceCreationForNextImageBufferForTesting):
    (WebKit::RemoteRenderingBackendProxy::didCreateImageBufferBackend):
    * Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.h:
    * Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.messages.in:
    * Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.cpp:
    (WebKit::WebChromeClient::shouldBlockIOSurfaceCreationForNextImageBuffer):
    * Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.h:

    Canonical link: https://commits.webkit.org/252493@main

Canonical link: https://commits.webkit.org/252432.58@safari-7614-branch