Source/WebCore/html/HTMLCanvasElement.h
@@ -139,6 +139,7 @@ public:
 #if PLATFORM(COCOA)
     GraphicsContext* drawingContext() const final;
 #endif
+    WEBCORE_EXPORT void setAvoidIOSurfaceSizeCheckInWebProcessForTesting();
 
 private:
     HTMLCanvasElement(const QualifiedName&, Document&);
@@ -186,7 +187,8 @@ private:
     mutable RefPtr<Image> m_copiedImage; // FIXME: This is temporary for platforms that have to copy the image buffer to render (and for CSSCanvasValue).
 
     std::optional<bool> m_usesDisplayListDrawing;
-
+    
+    bool m_avoidBackendSizeCheckForTesting { false };
     bool m_ignoreReset { false };
     // m_hasCreatedImageBuffer means we tried to malloc the buffer. We didn't necessarily get it.
     mutable bool m_hasCreatedImageBuffer { false };
